all JuMP syntax updated

--- a/IPCluster_examples/farmlarge_IPCluster.ipynb
+++ b/IPCluster_examples/farmlarge_IPCluster.ipynb
@@ -72,15 +72,15 @@
     "sellub[P] = rand(d,NP)\n",
     "\n",
     "m = Model(solver=IpoptSolver())\n",
-    "@defVar(m, x[S,P] >= 0)    # acres devoted to crops\n",
-    "@defVar(m, y[S,P] >= 0)    # crops purchase\n",
-    "@defVar(m, 0<=w[S,j in P] <= sellub[j in P])    # crops sold;\n",
-    "@defVar(m, cost[s in S])\n",
-    "@addConstraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
-    "@addConstraint(m, cap[s in S], sum{x[s,j], j in P} <= 200*NP)\n",
-    "@addConstraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j])\n",
-    "@addConstraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
-    "@setObjective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
+    "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
+    "@variable(m, y[S,P] >= 0)    # crops purchase\n",
+    "@variable(m, 0<=w[S,j in P] <= sellub[j in P])    # crops sold;\n",
+    "@variable(m, cost[s in S])\n",
+    "@constraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 200*NP)\n",
+    "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j])\n",
+    "@constraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
+    "@objective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
     "solve(m)\n",
     "\n"
    ]
@@ -95,17 +95,17 @@
    "source": [
     "# build with StochJuMP and solve with IPCluster\n",
     "m = StochasticModel(NS)\n",
-    "@defVar(m, x[P] >= 0)    # acres devoted to crops\n",
-    "@defVar(m, s2 >= 0)\n",
-    "@addConstraint(m, cap, sum{x[j], j in P} + s2 == 200*NP)\n",
-    "@setObjective(m, Min, sum{prcost[j]*x[j], j in P})\n",
+    "@variable(m, x[P] >= 0)    # acres devoted to crops\n",
+    "@variable(m, s2 >= 0)\n",
+    "@constraint(m, cap, sum{x[j], j in P} + s2 == 200*NP)\n",
+    "@objective(m, Min, sum{prcost[j]*x[j], j in P})\n",
     "for i in 1:NS\n",
     "    bl = StochasticBlock(m)\n",
-    "    @defVar(bl, y[P] >= 0)    # crops purchase\n",
-    "    @defVar(bl, 0<=w[j in P] <= sellub[j in P])    # crops sold;\n",
-    "    @defVar(bl, s[P] >= 0)\n",
-    "    @addConstraint(bl, bal[j in P], yield[i,j]*x[j]+y[j]-w[j] - s[j] == demand[j])\n",
-    "    @setObjective(bl, Min, 1.0/NS*sum{pcost[j]*y[j] - scost[j]*w[j], j in P})\n",
+    "    @variable(bl, y[P] >= 0)    # crops purchase\n",
+    "    @variable(bl, 0<=w[j in P] <= sellub[j in P])    # crops sold;\n",
+    "    @variable(bl, s[P] >= 0)\n",
+    "    @constraint(bl, bal[j in P], yield[i,j]*x[j]+y[j]-w[j] - s[j] == demand[j])\n",
+    "    @objective(bl, Min, 1.0/NS*sum{pcost[j]*y[j] - scost[j]*w[j], j in P})\n",
     "end\n",
     "CluIPM_solve(m)"
    ]
@@ -122,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.2",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -130,7 +130,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.2"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
