Updated PIPS notebooks JuMP syntax

--- a/DSP_examples/Farmer_Example/farmer_stoch.ipynb
+++ b/DSP_examples/Farmer_Example/farmer_stoch.ipynb
@@ -118,13 +118,13 @@
     "# FIRST-STAGE MODEL\n",
     "\n",
     "# first-stage variables\n",
-    "@defVar(m, x[i=CROPS] >= 0, Int)\n",
+    "@variable(m, x[i=CROPS] >= 0, Int)\n",
     "\n",
     "# first-stage objective\n",
-    "@setObjective(m, Min, sum{Cost[i] * x[i], i=CROPS})\n",
+    "@objective(m, Min, sum{Cost[i] * x[i], i=CROPS})\n",
     "\n",
     "# first-stage constraint\n",
-    "@addConstraint(m, const_budget,\n",
+    "@constraint(m, const_budget,\n",
     "               sum{x[i], i=CROPS} <= Budget)\n",
     "\n",
     "\n",
@@ -135,20 +135,20 @@
     "    sb = StochasticBlock(m, probability[s]);\n",
     "\n",
     "    # second-stage variables\n",
-    "    @defVar(sb, y[j=PURCH] >= 0)\n",
-    "    @defVar(sb, w[k=SELL] >= 0)\n",
+    "    @variable(sb, y[j=PURCH] >= 0)\n",
+    "    @variable(sb, w[k=SELL] >= 0)\n",
     "\n",
     "    # objective\n",
-    "    @setObjective(sb, Min,\n",
+    "    @objective(sb, Min,\n",
     "                  sum{Purchase[s,j] * y[j], j=PURCH}\n",
     "                  - sum{Sell[s,k] * w[k], k=SELL})\n",
     "\n",
     "    # constraints\n",
-    "    @addConstraint(sb, const_minreq[j=PURCH],\n",
+    "    @constraint(sb, const_minreq[j=PURCH],\n",
     "                   Yield[s,j] * x[j] + y[j] - w[j] >= Minreq[s,j])\n",
-    "    @addConstraint(sb, const_minreq_beets,\n",
+    "    @constraint(sb, const_minreq_beets,\n",
     "                   Yield[s,3] * x[3] - w[3] - w[4] >= Minreq[s,3])\n",
-    "    @addConstraint(sb, const_aux, w[3] <= 6000)\n",
+    "    @constraint(sb, const_aux, w[3] <= 6000)\n",
     "end\n",
     "\n",
     "print(m)"
