--- a/PIPS_examples/farm_PIPS.ipynb
+++ b/PIPS_examples/farm_PIPS.ipynb
@@ -69,16 +69,16 @@
    "source": [
     "# build the model and solve with IPOPT\n",
     "m = Model(solver=IpoptSolver())\n",
-    "@defVar(m, x[S,P] >= 0)    # acres devoted to crops\n",
-    "@defVar(m, y[S,P] >= 0)    # crops purchase\n",
-    "@defVar(m, w[S,P] >= 0)    # crops sold;\n",
-    "@defVar(m, cost[s in S])\n",
-    "@addConstraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
-    "@addConstraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
-    "@addConstraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j])\n",
-    "@addConstraint(m, sellb[s in S], w[s,3] <= 6000)\n",
-    "@addConstraint(m, buyb[s in S], y[s,3] <= 0)\n",
-    "@addConstraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
+    "@variable(m, x[S,P] >= 0)    # acres devoted to crops\n",
+    "@variable(m, y[S,P] >= 0)    # crops purchase\n",
+    "@variable(m, w[S,P] >= 0)    # crops sold;\n",
+    "@variable(m, cost[s in S])\n",
+    "@constraint(m, varcost[s in S], cost[s] == sum{prcost[j]*x[s,j] + pcost[j]*y[s,j] - scost[j]*w[s,j], j in P})\n",
+    "@constraint(m, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
+    "@constraint(m, bal[s in S,j in P], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j])\n",
+    "@constraint(m, sellb[s in S], w[s,3] <= 6000)\n",
+    "@constraint(m, buyb[s in S], y[s,3] <= 0)\n",
+    "@constraint(m, nonant[s in S,j in P], x[1,j] == x[s,j])\n",
     "@setObjective(m, Min, (1/NS)*sum{cost[s], s in S})\n",
     "solve(m)"
    ]
@@ -93,18 +93,18 @@
    "source": [
     "# build with PLASMO and solve with PIPS-NLP\n",
     "m = NetModel()\n",
-    "@defVar(m, x[P] >= 0)         # acres devoted to crops\n",
-    "@addConstraint(m, cap, sum{x[j], j in P}  <= 500)\n",
-    "@setObjective(m, Min, sum{prcost[j]*x[j], j in P})\n",
+    "@variable(m, x[P] >= 0)         # acres devoted to crops\n",
+    "@constraint(m, cap, sum{x[j], j in P}  <= 500)\n",
+    "@objective(m, Min, sum{prcost[j]*x[j], j in P})\n",
     "for i in 1:NS\n",
     "    bl = Model()\n",
-    "    @defVar(bl, y[P] >= 0)    # crops purchase\n",
-    "    @defVar(bl, w[P] >= 0)    # crops sold;\n",
-    "    setUpper(w[3], 6000)\n",
-    "    setUpper(y[3], 0)\n",
-    "    @setObjective(bl, Min, 1.0/NS*sum{pcost[j]*y[j] - scost[j]*w[j], j in P})\n",
+    "    @variable(bl, y[P] >= 0)    # crops purchase\n",
+    "    @variable(bl, w[P] >= 0)    # crops sold;\n",
+    "    setupperbound(w[3], 6000)\n",
+    "    setupperbound(y[3], 0)\n",
+    "    @objective(bl, Min, 1.0/NS*sum{pcost[j]*y[j] - scost[j]*w[j], j in P})\n",
     "    @addNode(m, bl, \"s$i\")\n",
-    "    @addConstraint(m, bal[j in P], yield[i,j]*x[j]+y[j]-w[j] >= demand[j])\n",
+    "    @constraint(m, bal[j in P], yield[i,j]*x[j]+y[j]-w[j] >= demand[j])\n",
     "end\n",
     "ParPipsNlp_solve(m)"
    ]
@@ -121,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.4.2",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
    "name": "julia-0.4"
   },
@@ -129,7 +129,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.4.2"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
