Import JuMP when using StochJuMP

--- a/DSP_examples/Farmer_Example/farmer_stoch.ipynb
+++ b/DSP_examples/Farmer_Example/farmer_stoch.ipynb
@@ -109,7 +109,7 @@
     }
    ],
    "source": [
-    "using MPI, StochJuMP, DSPsolver\n",
+    "using MPI, StochJuMP, DSPsolver, JuMP\n",
     "# CREATE STOCHASTIC MODEL\n",
     "ENV[\"LD_LIBRARY_PATH\"] = \"DSP/lib\"\n",
     "m = StochasticModel(NS);\n",
