--- a/UWMadison2016/stochprog/farmer-probconstraint.ipynb
+++ b/UWMadison2016/stochprog/farmer-probconstraint.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
        "30"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -253,18 +253,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: @addNLConstraint is deprecated, use @NLconstraint instead.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -276,134 +269,20 @@
       "         For more information visit http://projects.coin-or.org/Ipopt\n",
       "******************************************************************************\n",
       "\n",
-      "This is Ipopt version trunk, running with linear solver ma27.\n",
-      "\n",
-      "Number of nonzeros in equality constraint Jacobian...:       92\n",
-      "Number of nonzeros in inequality constraint Jacobian.:       70\n",
-      "Number of nonzeros in Lagrangian Hessian.............:        5\n",
-      "\n",
-      "Total number of variables............................:       60\n",
-      "                     variables with only lower bounds:       50\n",
-      "                variables with lower and upper bounds:        0\n",
-      "                     variables with only upper bounds:        0\n",
-      "Total number of equality constraints.................:       25\n",
-      "Total number of inequality constraints...............:       31\n",
-      "        inequality constraints with only lower bounds:       10\n",
-      "   inequality constraints with lower and upper bounds:        0\n",
-      "        inequality constraints with only upper bounds:       21\n",
-      "\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "   0  0.0000000e+00 2.40e+02 1.00e+00  -1.0 0.00e+00    -  0.00e+00 0.00e+00   0\n",
-      "   1  1.2924575e+01 2.40e+02 2.50e+00  -1.0 1.27e+03    -  4.01e-03 1.01e-02h  1\n",
-      "   2  3.1849797e+02 2.37e+02 5.41e+00  -1.0 3.05e+04    -  4.18e-04 1.00e-02h  1\n",
-      "   3  9.9705585e+02 2.32e+02 5.28e+00  -1.0 2.97e+04    -  2.89e-02 2.28e-02h  1\n",
-      "   4  5.5003252e+03 1.96e+02 5.84e+00  -1.0 2.93e+04    -  2.75e-02 1.54e-01h  1\n",
-      "   5  6.0172347e+03 1.74e+02 1.08e+01  -1.0 4.44e+03    -  2.84e-04 1.16e-01h  1\n",
-      "   6 -1.1474023e+05 1.71e+02 1.23e+01  -1.0 6.83e+06    -  3.50e-04 1.77e-02f  1\n",
-      "   7 -1.1503170e+05 1.68e+02 7.26e+00  -1.0 1.66e+04    -  6.48e-02 1.76e-02f  1\n",
-      "   8 -1.1211939e+05 1.53e+02 1.47e+01  -1.0 3.47e+04    -  7.00e-04 8.40e-02h  1\n",
-      "   9 -3.1830195e+05 1.35e+02 2.45e+01  -1.0 1.70e+06    -  8.56e-04 1.21e-01f  1\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  10 -3.1690536e+05 1.26e+02 6.67e+01  -1.0 2.07e+04    -  1.00e+00 6.76e-02h  1\n",
-      "  11 -3.0942242e+05 1.01e+02 1.38e+02  -1.0 3.78e+04    -  1.00e+00 1.98e-01h  1\n",
-      "  12 -3.0916716e+05 1.00e+02 2.06e+04  -1.0 3.03e+04    -  1.00e+00 8.42e-03h  1\n",
-      "  13 -3.0911599e+05 9.98e+01 1.22e+07  -1.0 3.02e+04    -  1.00e+00 1.70e-03h  1\n",
-      "  14 -2.8162570e+05 8.47e+00 1.25e+06  -1.0 3.00e+04    -  1.00e+00 9.15e-01h  1\n",
-      "  15 -2.7915221e+05 2.22e-01 3.93e+05  -1.0 2.54e+03    -  1.00e+00 9.73e-01h  1\n",
-      "  16 -2.7914524e+05 1.95e-01 1.30e+07  -1.0 5.86e+01    -  1.00e+00 1.19e-01h  1\n",
-      "  17 -2.7909511e+05 8.31e-02 2.56e-04  -1.0 5.01e+01    -  1.00e+00 1.00e+00h  1\n",
-      "  18 -2.7909721e+05 8.31e-02 1.59e+07  -2.5 3.75e+00    -  1.00e+00 5.60e-01f  1\n",
-      "  19 -2.7909868e+05 8.31e-02 2.58e+06  -2.5 1.47e+00    -  8.72e-01 1.00e+00f  1\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  20 -2.7827961e+05 8.31e-02 3.86e+07  -2.5 8.19e+02    -  1.19e-03 1.00e+00h  1\n",
-      "  21 -2.7738520e+05 8.31e-02 1.88e+07  -2.5 1.87e+03  -4.0 1.00e+00 4.79e-01h  1\n",
-      "  22 -2.6625431e+05 8.30e-02 1.42e+07  -2.5 1.13e+04  -4.5 1.42e-01 9.85e-01h  1\n",
-      "  23 -2.6347246e+05 8.29e-02 2.59e+07  -2.5 1.00e+04  -4.1 1.00e+00 2.77e-01h  1\n",
-      "  24 -2.5980334e+05 8.29e-02 1.71e+00  -2.5 3.67e+03  -3.6 1.00e+00 1.00e+00h  1\n",
-      "  25 -2.4660148e+05 8.26e-02 5.79e+06  -2.5 3.65e+04  -4.1 1.99e-01 3.62e-01h  1\n",
-      "  26 -2.2820833e+05 8.18e-02 3.84e+07  -2.5 2.04e+04  -3.7 2.50e-04 9.20e-01h  1\n",
-      "  27 -2.2607867e+05 8.16e-02 3.78e+07  -2.5 3.43e+04  -3.3 5.18e-02 9.14e-02h  1\n",
-      "  28 -2.2000347e+05 8.06e-02 4.44e+01  -2.5 8.48e+03  -2.8 1.00e+00 1.00e+00h  1\n",
-      "  29 -2.1738683e+05 8.02e-02 4.77e+06  -2.5 4.59e+03  -2.4 9.75e-01 8.37e-01h  1\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  30 -2.0403367e+05 7.80e-02 1.18e+07  -2.5 3.43e+04  -2.9 1.00e+00 6.47e-01h  1\n",
-      "  31 -1.9576324e+05 7.44e-02 7.26e+06  -2.5 2.97e+04  -2.4 6.10e-01 5.24e-01h  1\n",
-      "  32 -1.8857156e+05 6.86e-02 2.16e+06  -2.5 1.52e+04  -2.0 1.00e+00 9.27e-01h  1\n",
-      "  33 -1.8450447e+05 6.32e-02 3.02e+02  -2.5 8.25e+03  -1.6 1.00e+00 1.00e+00h  1\n",
-      "  34 -1.7256105e+05 4.73e-02 3.32e+05  -2.5 1.15e+05  -2.1 1.10e-01 2.29e-01h  1\n",
-      "  35 -1.6311892e+05 1.82e-02 8.17e+04  -2.5 3.36e+04  -1.6 8.39e-01 6.19e-01h  1\n",
-      "  36 -1.5583898e+05 3.97e-04 3.05e+07  -2.5 3.43e+05  -2.1 1.68e-01 4.46e-02h  2\n",
-      "  37 -1.5462002e+05 3.92e-04 3.04e+07  -2.5 2.78e+05  -2.6 4.93e-03 4.93e-03s 15\n",
-      "  38 -1.2746212e+05 7.18e-02 1.25e+07  -2.5 7.48e+04  -2.2 5.88e-01 5.88e-01s 15\n",
-      "  39 -1.2646491e+05 6.19e-02 1.12e+07  -2.5 1.02e+04  -1.8 1.04e-01 1.04e-01s 15\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  40 -1.2352322e+05 5.53e-02 1.05e+07  -2.5 5.51e+04  -2.2 6.95e-02 6.95e-02s 15\n",
-      "  41 -1.2143987e+05 4.07e-02 8.56e+06  -2.5 1.29e+04  -1.8 1.81e-01 1.81e-01s 15\n",
-      "  42 -1.1831617e+05 3.71e-02 8.23e+06  -2.5 1.12e+05  -2.3 3.84e-02 3.84e-02s 15\n",
-      "  43 -1.1831035e+05 3.70e-02 8.23e+06  -2.5 1.69e+04  -1.9 4.04e-04 4.04e-04s 15\n",
-      "  44r-1.1831035e+05 3.70e-02 1.00e+03  -0.9 0.00e+00  -2.3 0.00e+00 0.00e+00R  1\n",
-      "  45r-1.1831084e+05 3.06e-04 1.00e+03  -0.9 3.79e+02    -  1.04e-02 2.89e-03f  1\n",
-      "  46r-1.1831313e+05 1.84e-04 9.98e+02  -0.9 3.52e+02    -  2.38e-01 1.37e-02f  1\n",
-      "  47r-1.1835604e+05 1.20e-04 7.29e+02  -0.9 2.41e+02    -  3.33e-01 2.65e-01f  1\n",
-      "  48r-1.1847456e+05 1.46e-04 9.99e+02  -0.9 1.70e+02    -  5.00e-03 1.00e+00f  1\n",
-      "  49r-1.1847451e+05 1.46e-04 9.99e+02  -0.9 2.47e+02    -  1.60e-04 4.33e-04f  1\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  50 -1.2786844e+05 1.39e-02 1.50e+00  -2.5 1.68e+06    -  1.32e-02 6.84e-03f  2\n",
-      "  51 -1.3746119e+05 3.03e-02 1.55e+00  -2.5 2.73e+06    -  8.01e-03 3.95e-03f  3\n",
-      "  52 -1.4407655e+05 3.73e-02 3.49e+00  -2.5 3.86e+06    -  9.23e-03 1.86e-03f  3\n",
-      "  53 -1.4660726e+05 3.81e-02 1.25e+01  -2.5 5.04e+06    -  8.48e-03 5.33e-04f  1\n",
-      "  54 -1.5063663e+05 3.97e-02 6.68e+01  -2.5 5.05e+06    -  1.40e-02 8.45e-04f  3\n",
-      "  55 -1.5659338e+05 4.14e-02 3.56e+02  -2.5 3.61e+06    -  1.61e-02 1.77e-03f  2\n",
-      "  56 -1.6268985e+05 4.02e-02 4.76e+03  -2.5 1.61e+06    -  4.82e-02 3.96e-03f  1\n",
-      "  57 -1.6434875e+05 3.94e-02 5.05e+04  -2.5 1.94e+05    -  1.96e-01 1.95e-02f  1\n",
-      "  58 -1.9492927e+05 3.05e-02 3.03e+04  -2.5 3.76e+05    -  1.19e-01 1.82e-01f  1\n",
-      "  59 -1.9552940e+05 2.62e-02 2.27e+05  -2.5 4.97e+03    -  9.73e-01 1.40e-01f  1\n",
-      "iter    objective    inf_pr   inf_du lg(mu)  ||d||  lg(rg) alpha_du alpha_pr  ls\n",
-      "  60 -1.9821900e+05 2.83e-03 2.59e+04  -2.5 3.07e+03    -  9.97e-01 8.90e-01f  1\n",
-      "  61 -1.9826660e+05 1.99e-03 2.05e+04  -2.5 1.63e+02    -  1.00e+00 3.01e-01f  1\n",
-      "  62 -1.9833950e+05 5.85e-04 5.96e+03  -2.5 1.06e+02    -  1.00e+00 7.09e-01f  1\n",
-      "  63 -1.9835218e+05 1.50e-04 1.51e+03  -2.5 1.79e+01    -  1.00e+00 7.47e-01f  1\n",
-      "  64 -1.9835248e+05 3.45e-06 1.12e-07  -2.5 5.37e-01    -  1.00e+00 1.00e+00f  1\n",
-      "  65 -1.9835125e+05 5.82e-11 2.48e-08  -5.7 1.25e+00    -  1.00e+00 1.00e+00h  1\n",
-      "  66 -1.9835125e+05 2.91e-11 3.98e-12  -8.6 4.38e-04    -  1.00e+00 1.00e+00f  1\n",
-      "  67 -1.9835125e+05 2.91e-11 2.78e+02  -8.6 3.84e-08    -  1.00e+00 3.91e-03h  9\n",
-      "  68 -1.9835125e+05 2.91e-11 1.03e-11  -8.6 3.92e-08    -  1.00e+00 1.00e+00s 22\n",
-      "\n",
-      "Number of Iterations....: 68\n",
-      "\n",
-      "                                   (scaled)                 (unscaled)\n",
-      "Objective...............:  -1.9835125194480733e+05   -1.9835125194480733e+05\n",
-      "Dual infeasibility......:   1.0293741381765184e-11    1.0293741381765184e-11\n",
-      "Constraint violation....:   1.1193780944897579e-11    2.9103830456733704e-11\n",
-      "Complementarity.........:   8.5878685802265287e-09    8.5878685802265287e-09\n",
-      "Overall NLP error.......:   1.0442739597040347e-10    8.5878685802265287e-09\n",
-      "\n",
-      "\n",
-      "Number of objective function evaluations             = 139\n",
-      "Number of objective gradient evaluations             = 65\n",
-      "Number of equality constraint evaluations            = 139\n",
-      "Number of inequality constraint evaluations          = 139\n",
-      "Number of equality constraint Jacobian evaluations   = 70\n",
-      "Number of inequality constraint Jacobian evaluations = 70\n",
-      "Number of Lagrangian Hessian evaluations             = 68\n",
-      "Total CPU secs in IPOPT (w/o function evaluations)   =      0.078\n",
-      "Total CPU secs in NLP function evaluations           =      0.021\n",
-      "\n",
-      "EXIT: Optimal Solution Found.\n",
       "cost: 1 dimensions:\n",
-      "[1] = -241551.2523768751\n",
-      "[2] = -241551.25237687508\n",
-      "[3] = -241551.25237687505\n",
-      "[4] = -241551.252376875\n",
-      "[5] = -25551.250216536322\n",
+      "[1] = -241551.25237687508\n",
+      "[2] = -241551.25237687505\n",
+      "[3] = -241551.25237687503\n",
+      "[4] = -241551.25237687497\n",
+      "[5] = -25551.250216536293\n",
       "\n",
       "\n",
       "probcost: 1 dimensions:\n",
-      "[1] = 5298.154230041102\n",
-      "[2] = 4947.23131505683\n",
-      "[3] = 4596.308400072556\n",
-      "[4] = 4245.385485088283\n",
-      "[5] = -2105.5374899053963\n",
+      "[1] = 5298.154230041101\n",
+      "[2] = 4947.231315056828\n",
+      "[3] = 4596.308400072554\n",
+      "[4] = 4245.385485088281\n",
+      "[5] = -2105.537489905399\n",
       "\n",
       "\n",
       "phi: 1 dimensions:\n",
@@ -411,10 +290,10 @@
       "[2] = 1.0992192093308593\n",
       "[3] = 1.0988913172566999\n",
       "[4] = 1.098425922732688\n",
-      "[5] = 0.604013425459832\n",
+      "[5] = 0.6040134254598314\n",
       "\n",
       "\n",
-      "obj -198351.25194480733\n"
+      "obj -198351.2519448073\n"
      ]
     }
    ],
@@ -423,7 +302,7 @@
     "b= 10\n",
     "c= 1e-3\n",
     "\n",
-    "mp = Model(solver=IpoptSolver())\n",
+    "mp = Model(solver=IpoptSolver(print_level=0))\n",
     "\n",
     "@variable(mp, x[S,P] >= 0)     # acres devoted to crops\n",
     "@variable(mp, y[S,P] >= 0)     # crops purchase\n",
@@ -438,7 +317,7 @@
     "@constraint(mp, cap[s in S], sum{x[s,j], j in P} <= 500)\n",
     "@constraint(mp, bal[s in S,j in 1:2], yield[s,j]*x[s,j]+y[s,j]-w[s,j] >= demand[j]) \n",
     "@constraint(mp, probeq1[s in S], probcost[s] == -(yield[s,3]*x[s,3]+y[s,3]-w[s,3] - demand[3])) \n",
-    "@addNLConstraint(mp,phidef[s in S], (1+b)/(b+exp(-c*probcost[s])) <= phi[s] )\n",
+    "@NLconstraint(mp,phidef[s in S], (1+b)/(b+exp(-c*probcost[s])) <= phi[s] )\n",
     "@constraint(mp, (1.0/NS)*sum{phi[s], s in S} <= alpha )\n",
     "\n",
     "@constraint(mp, sellb[s in S], w[s,3] <= 6000)\n",
@@ -449,7 +328,7 @@
     "\n",
     "solve(mp)\n",
     "\n",
-    "# Results (with CVaR)\n",
+    "# Results (with Sigmoid)\n",
     "println(getvalue(cost))\n",
     "println(\"\")\n",
     "println(getvalue(probcost))\n",
