--- a/UWMadison2016/stochprog/farmerws.ipynb
+++ b/UWMadison2016/stochprog/farmerws.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -80,18 +80,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit http://projects.coin-or.org/Ipopt\n",
+      "******************************************************************************\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        ":Optimal"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +154,7 @@
       "  [2,2] = 79.99999920012897\n",
       "  [2,3] = 340.00000659736713\n",
       "[3,:]\n",
-      "  [3,1] = 120.00000280082537\n",
+      "  [3,1] = 120.00000280082533\n",
       "  [3,2] = 79.99999920015239\n",
       "  [3,3] = 300.0000029989767\n",
       "[4,:]\n",
@@ -149,7 +162,7 @@
       "  [4,2] = 79.99999920015239\n",
       "  [4,3] = 240.00000239922\n",
       "[5,:]\n",
-      "  [5,1] = 220.00000380042715\n",
+      "  [5,1] = 220.00000380042712\n",
       "  [5,2] = 79.99999920015239\n",
       "  [5,3] = 200.0000019993749\n",
       "\n",
@@ -158,23 +171,23 @@
       "[1,:]\n",
       "  [1,1] = 0.0\n",
       "  [1,2] = 0.0\n",
-      "  [1,3] = 9.752086119058704e-9\n",
+      "  [1,3] = 9.752086119058693e-9\n",
       "[2,:]\n",
       "  [2,1] = 0.0\n",
       "  [2,2] = 0.0\n",
-      "  [2,3] = 9.714578177618197e-9\n",
+      "  [2,3] = 9.714578177618196e-9\n",
       "[3,:]\n",
       "  [3,1] = 0.0\n",
       "  [3,2] = 0.0\n",
-      "  [3,3] = 9.580169952360286e-9\n",
+      "  [3,3] = 9.580169952360632e-9\n",
       "[4,:]\n",
       "  [4,1] = 0.0\n",
       "  [4,2] = 0.0\n",
-      "  [4,3] = 9.227902637278397e-9\n",
+      "  [4,3] = 9.227902637280718e-9\n",
       "[5,:]\n",
       "  [5,1] = 0.0\n",
       "  [5,2] = 0.0\n",
-      "  [5,3] = 8.765825074882278e-9\n",
+      "  [5,3] = 8.765825074884802e-9\n",
       "\n",
       "\n",
       "w: 2 dimensions:\n",
@@ -187,7 +200,7 @@
       "  [2,2] = 0.0\n",
       "  [2,3] = 5100.000098979874\n",
       "[3,:]\n",
-      "  [3,1] = 100.00000899217395\n",
+      "  [3,1] = 100.00000899217387\n",
       "  [3,2] = 0.0\n",
       "  [3,3] = 6000.000059998646\n",
       "[4,:]\n",
@@ -195,7 +208,7 @@
       "  [4,2] = 0.0\n",
       "  [4,3] = 6000.000059999142\n",
       "[5,:]\n",
-      "  [5,1] = 350.0000114911784\n",
+      "  [5,1] = 350.00001149117827\n",
       "  [5,2] = 0.0\n",
       "  [5,3] = 6000.000059999311\n",
       "\n",
@@ -205,7 +218,7 @@
       "[2] = -64800.002153889465\n",
       "[3] = -118600.00267570352\n",
       "[4] = -150700.0029965912\n",
-      "[5] = -172100.00321051443\n",
+      "[5] = -172100.0032105144\n",
       "\n",
       "\n",
       "obj: -113860.00263162237\n"
@@ -223,7 +236,7 @@
     "println(\"\")\n",
     "println(getvalue(cost))\n",
     "println(\"\")\n",
-    "println(\"obj: \", getObjectiveValue(m))"
+    "println(\"obj: \", getobjectivevalue(m))"
    ]
   },
   {
