--- a/UWMadison2016/stochprog/ipoptex1.ipynb
+++ b/UWMadison2016/stochprog/ipoptex1.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -42,6 +42,13 @@
       " x ≥ 0\n",
       " y ≥ 0\n",
       "\n",
+      "\n",
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit http://projects.coin-or.org/Ipopt\n",
+      "******************************************************************************\n",
       "\n",
       "This is Ipopt version 3.12.1, running with linear solver mumps.\n",
       "NOTE: Other linear solvers might be more efficient (see Ipopt documentation).\n",
@@ -91,8 +98,8 @@
       "Number of equality constraint Jacobian evaluations   = 11\n",
       "Number of inequality constraint Jacobian evaluations = 0\n",
       "Number of Lagrangian Hessian evaluations             = 10\n",
-      "Total CPU secs in IPOPT (w/o function evaluations)   =      0.004\n",
-      "Total CPU secs in NLP function evaluations           =      0.000\n",
+      "Total CPU secs in IPOPT (w/o function evaluations)   =      0.053\n",
+      "Total CPU secs in NLP function evaluations           =      0.016\n",
       "\n",
       "EXIT: Optimal Solution Found.\n"
      ]
@@ -103,7 +110,7 @@
        ":Optimal"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,8 +145,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x = 1.0000000000001885\n",
-      "y = 0.0\n"
+      "x = 0.8121835187292459\n",
+      "y = 0.5834020334580615\n"
      ]
     }
    ],
@@ -160,15 +167,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.3.12",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
-   "name": "julia-0.3"
+   "name": "julia-0.4"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.3.12"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
