--- a/UWMadison2016/stochprog/farmer.ipynb
+++ b/UWMadison2016/stochprog/farmer.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,7 @@
        "30"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
        ":Optimal"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -133,80 +133,99 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x: 2 dimensions, 15 entries:\n",
-      " [1,1] = 220.00000380066524\n",
-      " [1,2] = 79.9999992000006\n",
-      " [1,3] = 200.00000199933396\n",
-      " [2,1] = 220.00000380066524\n",
-      " [2,2] = 79.9999992000006\n",
-      " [2,3] = 200.00000199933396\n",
-      " [3,1] = 220.00000380066524\n",
-      " [3,2] = 79.9999992000006\n",
-      " [3,3] = 200.00000199933396\n",
-      " [4,1] = 220.00000380066524\n",
-      " [4,2] = 79.99999920000062\n",
-      " [4,3] = 200.00000199933396\n",
-      " [5,1] = 220.00000380066524\n",
-      " [5,2] = 79.99999920000062\n",
-      " [5,3] = 200.00000199933396\n",
+      "x: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 220.00000379973474\n",
+      "  [1,2] = 79.99999920015239\n",
+      "  [1,3] = 200.0000020000673\n",
+      "[2,:]\n",
+      "  [2,1] = 220.00000379973474\n",
+      "  [2,2] = 79.99999920015239\n",
+      "  [2,3] = 200.0000020000673\n",
+      "[3,:]\n",
+      "  [3,1] = 220.00000379973474\n",
+      "  [3,2] = 79.99999920015239\n",
+      "  [3,3] = 200.0000020000673\n",
+      "[4,:]\n",
+      "  [4,1] = 220.00000379973474\n",
+      "  [4,2] = 79.99999920015239\n",
+      "  [4,3] = 200.0000020000673\n",
+      "[5,:]\n",
+      "  [5,1] = 220.00000379973474\n",
+      "  [5,2] = 79.99999920015239\n",
+      "  [5,3] = 200.0000020000673\n",
       "\n",
-      "y: 2 dimensions, 15 entries:\n",
-      " [1,1] = 0.0\n",
-      " [1,2] = 0.0\n",
-      " [1,3] = 9.99861130401085e-9\n",
-      " [2,1] = 0.0\n",
-      " [2,2] = 0.0\n",
-      " [2,3] = 9.998611304001737e-9\n",
-      " [3,1] = 0.0\n",
-      " [3,2] = 0.0\n",
-      " [3,3] = 9.998611304009665e-9\n",
-      " [4,1] = 0.0\n",
-      " [4,2] = 0.0\n",
-      " [4,3] = 9.998614010973276e-9\n",
-      " [5,1] = 0.0\n",
-      " [5,2] = 0.0\n",
-      " [5,3] = 9.990331945867265e-9\n",
       "\n",
-      "w: 2 dimensions, 15 entries:\n",
-      " [1,1] = 350.0000114916636\n",
-      " [1,2] = 0.0\n",
-      " [1,3] = 2000.0000200133368\n",
-      " [2,1] = 350.0000114916636\n",
-      " [2,2] = 0.0\n",
-      " [2,3] = 3000.0000300100064\n",
-      " [3,1] = 350.0000114916636\n",
-      " [3,2] = 0.0\n",
-      " [3,3] = 4000.0000400066765\n",
-      " [4,1] = 350.0000114916636\n",
-      " [4,2] = 0.0\n",
-      " [4,3] = 5000.000050003346\n",
-      " [5,1] = 350.0000114916636\n",
-      " [5,2] = 0.0\n",
-      " [5,3] = 6000.0000599999985\n",
+      "y: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 0.0\n",
+      "  [1,2] = 0.0\n",
+      "  [1,3] = 0.0\n",
+      "[2,:]\n",
+      "  [2,1] = 0.0\n",
+      "  [2,2] = 0.0\n",
+      "  [2,3] = 0.0\n",
+      "[3,:]\n",
+      "  [3,1] = 0.0\n",
+      "  [3,2] = 0.0\n",
+      "  [3,3] = 0.0\n",
+      "[4,:]\n",
+      "  [4,1] = 0.0\n",
+      "  [4,2] = 0.0\n",
+      "  [4,3] = 0.0\n",
+      "[5,:]\n",
+      "  [5,1] = 0.0\n",
+      "  [5,2] = 0.0\n",
+      "  [5,3] = 0.0\n",
       "\n",
-      "cost: 1 dimensions, 5 entries:\n",
-      " [1] = -28100.001771116193\n",
-      " [2] = -64100.0021309963\n",
-      " [3] = -100100.0024908764\n",
-      " [4] = -136100.0028507565\n",
-      " [5] = -172100.003210636\n",
       "\n",
-      "obj -100100.00249087629\n"
+      "w: 2 dimensions:\n",
+      "[1,:]\n",
+      "  [1,1] = 350.00001148944745\n",
+      "  [1,2] = 0.0\n",
+      "  [1,3] = 2000.0000200003253\n",
+      "[2,:]\n",
+      "  [2,1] = 350.00001148944745\n",
+      "  [2,2] = 0.0\n",
+      "  [2,3] = 3000.000030000662\n",
+      "[3,:]\n",
+      "  [3,1] = 350.00001148944745\n",
+      "  [3,2] = 0.0\n",
+      "  [3,3] = 4000.0000400009985\n",
+      "[4,:]\n",
+      "  [4,1] = 350.00001148944745\n",
+      "  [4,2] = 0.0\n",
+      "  [4,3] = 5000.000050001335\n",
+      "[5,:]\n",
+      "  [5,1] = 350.00001148944745\n",
+      "  [5,2] = 0.0\n",
+      "  [5,3] = 6000.000059999594\n",
+      "\n",
+      "\n",
+      "cost: 1 dimensions:\n",
+      "[1] = -28100.001770180523\n",
+      "[2] = -64100.00213019264\n",
+      "[3] = -100100.00249020477\n",
+      "[4] = -136100.00285021687\n",
+      "[5] = -172100.00321015422\n",
+      "\n",
+      "\n",
+      "obj -100100.00249018983\n"
      ]
     }
    ],
    "source": [
     "# Results\n",
     "\n",
-    "println(getValue(x))\n",
+    "println(getvalue(x))\n",
     "println(\"\")\n",
-    "println(getValue(y))\n",
+    "println(getvalue(y))\n",
     "println(\"\")\n",
-    "println(getValue(w))\n",
+    "println(getvalue(w))\n",
     "println(\"\")\n",
-    "println(getValue(cost))\n",
+    "println(getvalue(cost))\n",
     "println(\"\")\n",
-    "println(\"obj \",getObjectiveValue(m))"
+    "println(\"obj \",getobjectivevalue(m))"
    ]
   },
   {
@@ -221,15 +240,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.3.12",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
-   "name": "julia-0.3"
+   "name": "julia-0.4"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.3.12"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
