--- a/UWMadison2016/stochprog/farmer_stochjump_dsp.ipynb
+++ b/UWMadison2016/stochprog/farmer_stochjump_dsp.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -65,11 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: @defVar is deprecated, use @variable instead.\n",
+      "WARNING: @setObjective is deprecated, use @objective instead.\n",
+      "WARNING: @addConstraint is deprecated, use @constraint instead.\n"
+     ]
+    }
+   ],
    "source": [
     "using MPI, StochJuMP, DSPsolver\n",
     "# CREATE STOCHASTIC MODEL\n",
@@ -118,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -133,7 +143,7 @@
       "presolved problem has 4 variables (0 bin, 3 int, 0 impl, 1 cont) and 3 constraints\n",
       "\n",
       " time | node  | left  |LP iter|LP it/n| mem |mdpt |frac |vars |cons |cols |rows |cuts |confs|strbr|  dualbound   | primalbound  |  gap   \n",
-      "* 0.0s|     1 |     0 |    21 |     - | 187k|   0 |   - |   4 |   3 |   4 |  15 |  14 |   0 |   0 |-1.253900e+05 |-1.253900e+05 |   0.00%\n",
+      "* 0.0s|     1 |     0 |    31 |     - | 196k|   0 |   - |   4 |   3 |   4 |  20 |  20 |   0 |   0 |-1.253900e+05 |-1.253900e+05 |   0.00%\n",
       "\n",
       "SCIP Status        : problem is solved [optimal solution found]\n",
       "Solving Time (sec) : 0.01\n",
@@ -141,7 +151,9 @@
       "Primal Bound       : -1.25390000000000e+05 (1 solutions)\n",
       "Dual Bound         : -1.25390000000000e+05\n",
       "Gap                : 0.00 %\n",
-      "Solution Status: "
+      "Solution Status: Optimal\n",
+      "Primal Bound   : -125389.99999999999\n",
+      "Dual Bound     : -125390.0\n"
      ]
     },
     {
@@ -160,15 +172,6 @@
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Optimal\n",
-      "Primal Bound   : -125389.99999999997\n",
-      "Dual Bound     : -125390.0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "21-element Array{Float64,1}:\n",
@@ -184,7 +187,7 @@
        "    0.0        \n",
        "    0.0        \n",
        "  325.0        \n",
-       "    8.52651e-14\n",
+       "   -5.68434e-14\n",
        " 5000.0        \n",
        "    0.0        \n",
        "    0.0        \n",
@@ -195,7 +198,7 @@
        "    0.0        "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -303,7 +306,7 @@
        "    0.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,15 +358,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.3.12",
+   "display_name": "Julia 0.4.5",
    "language": "julia",
-   "name": "julia-0.3"
+   "name": "julia-0.4"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "0.3.12"
+   "version": "0.4.5"
   }
  },
  "nbformat": 4,
