--- a/UWMadison2016/stochprog/farmerdet.ipynb
+++ b/UWMadison2016/stochprog/farmerdet.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -76,18 +76,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "******************************************************************************\n",
+      "This program contains Ipopt, a library for large-scale nonlinear optimization.\n",
+      " Ipopt is released as open source code under the Eclipse Public License (EPL).\n",
+      "         For more information visit http://projects.coin-or.org/Ipopt\n",
+      "******************************************************************************\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        ":Optimal"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -136,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +160,7 @@
        ":Optimal"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -191,79 +204,79 @@
      "text": [
       "x = x: 2 dimensions:\n",
       "[1,:]\n",
-      "  [1,1] = 120.0000027998464\n",
-      "  [1,2] = 79.99999920015237\n",
+      "  [1,1] = 120.00000279984634\n",
+      "  [1,2] = 79.99999920015239\n",
       "  [1,3] = 300.00000299995565\n",
       "[2,:]\n",
-      "  [2,1] = 120.0000027998464\n",
-      "  [2,2] = 79.99999920015237\n",
+      "  [2,1] = 120.00000279984634\n",
+      "  [2,2] = 79.99999920015239\n",
       "  [2,3] = 300.00000299995565\n",
       "[3,:]\n",
-      "  [3,1] = 120.0000027998464\n",
-      "  [3,2] = 79.99999920015237\n",
+      "  [3,1] = 120.00000279984634\n",
+      "  [3,2] = 79.99999920015239\n",
       "  [3,3] = 300.00000299995565\n",
       "[4,:]\n",
-      "  [4,1] = 120.0000027998464\n",
-      "  [4,2] = 79.99999920015237\n",
+      "  [4,1] = 120.00000279984634\n",
+      "  [4,2] = 79.99999920015239\n",
       "  [4,3] = 300.00000299995565\n",
       "[5,:]\n",
-      "  [5,1] = 120.0000027998464\n",
-      "  [5,2] = 79.99999920015237\n",
+      "  [5,1] = 120.00000279984634\n",
+      "  [5,2] = 79.99999920015239\n",
       "  [5,3] = 300.00000299995565\n",
       "\n",
       "\n",
       "y = y: 2 dimensions:\n",
       "[1,:]\n",
       "  [1,1] = 0.0\n",
-      "  [1,2] = 2.3798088337145704e-6\n",
-      "  [1,3] = 9.655320358039876e-9\n",
+      "  [1,2] = 2.3798087768711324e-6\n",
+      "  [1,3] = 9.65532035803641e-9\n",
       "[2,:]\n",
       "  [2,1] = 0.0\n",
-      "  [2,2] = 2.3798088337145704e-6\n",
-      "  [2,3] = 9.646982445756895e-9\n",
+      "  [2,2] = 2.3798087768711324e-6\n",
+      "  [2,3] = 9.646982445737395e-9\n",
       "[3,:]\n",
       "  [3,1] = 0.0\n",
-      "  [3,2] = 2.3798088337145704e-6\n",
-      "  [3,3] = 6.278599007778835e-13\n",
+      "  [3,2] = 2.3798087768711324e-6\n",
+      "  [3,3] = 6.278599013474232e-13\n",
       "[4,:]\n",
       "  [4,1] = 0.0\n",
-      "  [4,2] = 2.3798088337145704e-6\n",
-      "  [4,3] = 3.295022271316701e-20\n",
+      "  [4,2] = 2.3798087768711324e-6\n",
+      "  [4,3] = 3.280541440718195e-20\n",
       "[5,:]\n",
       "  [5,1] = 0.0\n",
-      "  [5,2] = 2.379808833714569e-6\n",
-      "  [5,3] = 1.5936539229629058e-20\n",
+      "  [5,2] = 2.3798087768711324e-6\n",
+      "  [5,3] = 1.608959349234551e-20\n",
       "\n",
       "\n",
       "w = w: 2 dimensions:\n",
       "[1,:]\n",
-      "  [1,1] = 100.00000798972663\n",
+      "  [1,1] = 100.00000798972646\n",
       "  [1,2] = 0.0\n",
       "  [1,3] = 3000.000060008864\n",
       "[2,:]\n",
-      "  [2,1] = 100.00000798972663\n",
+      "  [2,1] = 100.00000798972646\n",
       "  [2,2] = 0.0\n",
       "  [2,3] = 4500.000090008634\n",
       "[3,:]\n",
-      "  [3,1] = 100.00000798972663\n",
+      "  [3,1] = 100.00000798972646\n",
       "  [3,2] = 0.0\n",
       "  [3,3] = 6000.000059999652\n",
       "[4,:]\n",
-      "  [4,1] = 100.00000798972663\n",
+      "  [4,1] = 100.00000798972646\n",
       "  [4,2] = 0.0\n",
       "  [4,3] = 6000.000059999652\n",
       "[5,:]\n",
-      "  [5,1] = 100.00000798972663\n",
+      "  [5,1] = 100.00000798972646\n",
       "  [5,2] = 0.0\n",
       "  [5,3] = 6000.000059999652\n",
       "\n",
       "\n",
       "cost = cost: 1 dimensions:\n",
-      "[1] = -10600.002003679287\n",
-      "[2] = -64600.00308367107\n",
-      "[3] = -118600.00200334768\n",
-      "[4] = -118600.00200334769\n",
-      "[5] = -118600.00200334769\n",
+      "[1] = -10600.00200367929\n",
+      "[2] = -64600.003083671065\n",
+      "[3] = -118600.00200334766\n",
+      "[4] = -118600.00200334768\n",
+      "[5] = -118600.00200334768\n",
       "\n",
       "\n",
       "obj: -86200.00221947869\n"
